--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  width: 70%;
+  width: 80%;
   margin: 0 auto;
 }
 
@@ -18,3 +18,12 @@ a:hover {
   text-decoration: none;
 }
 
+@media only screen and (max-width: 600px) {
+  body {
+    background-color: lightblue;
+  }
+  #addbtn{
+    width: 2rem !important;
+    margin: 10px !important;
+  }
+}
