--- a/src/App.css
+++ b/src/App.css
@@ -17,13 +17,30 @@ a:hover {
   cursor: pointer;
   text-decoration: none;
 }
-
+#widt-50 {
+  width: 50% !important;
+  margin-top: 3rem;
+  padding: 3rem;
+  border: 1px solid rgb(150, 150, 150);
+  border-radius: 10px;
+  filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 0.4));
+  box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034), 0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06), 0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086), 0 100px 80px rgba(0, 0, 0, 0.12);
+}
 @media only screen and (max-width: 600px) {
   body {
     background-color: lightblue;
   }
-  #addbtn{
+  #addbtn {
     width: 2rem !important;
     margin: 10px !important;
+  }
+  #widt-50 {
+    width: 100% !important;
+  }
+}
+@media only screen and (min-width: 601px) and (max-width: 990px) {
+ 
+  #widt-50 {
+    width: 65% !important;
   }
 }
